# haskell-ray-tracer

./: README.md  RayTracer.cabal  stack.yaml
src/: BaseFuncs.hs  BaseTypes.hs  LightSources.hs  LocalShadingModels.hs  Main.hs  Primitives.hs  Samplers.hs  Textures.hs  ViewingSystem.hs  WhittedTracer.hs
